@@ -1,3 +1,4 @@
+import me.champeau.jmh.JMHTask
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 import java.util.*
 
@@ -9,6 +10,8 @@ import java.util.*
  */
 plugins {
     java
+
+    id("me.champeau.jmh") version "0.7.2"
 }
 
 group = "com.priyakdey"
@@ -80,6 +83,7 @@ tasks.withType<Test> {
     val YELLOW = "\u001B[33m"
 
     // constants for pprint formatter
+    // TODO: do not hardcode the constants
     val CLASSNAME_COL_WIDTH = 30
     val TESTNAME_COL_WIDTH  = 70
     val STATUS_COL_WIDTH    = 10
@@ -166,3 +170,33 @@ tasks.withType<Test> {
 
 }
 // @formatter:on
+
+
+tasks.withType<JMHTask> {
+    iterations = 10             // Number of measurement iterations to do.
+    benchmarkMode.add("all")    // Benchmark mode. Available modes are: [Throughput/thrpt, AverageTime/avgt, SampleTime/sample, SingleShotTime/ss, All/all]
+    fork = 2                    // How many times to forks a single benchmark. Use 0 to disable forking altogether
+    failOnError = false         // Should JMH fail immediately if any benchmark had experienced the unrecoverable error?
+    forceGC = true              // Should JMH force GC between iterations?
+    jvmArgs.add("--enable-preview")
+    humanOutputFile = project.file("${project.layout.buildDirectory}/reports/jmh/human.txt") // human-readable output file
+    resultsFile = project.file("${project.layout.buildDirectory}/reports/jmh/results.txt") // results file
+    // profilers.add("async") // Use profilers to collect additional data. Supported profilers: [cl, comp, gc, stack, perf, perfnorm, perfasm, xperf, xperfasm, hs_cl, hs_comp, hs_gc, hs_rt, hs_thr, async]
+    resultFormat = "CSV" // Result format type (one of CSV, JSON, NONE, SCSV, TEXT)
+    threads = 4 // Number of worker threads to run with.
+
+    timeUnit = "ms" // Output time unit. Available time units are: [m, s, ms, us, ns].
+    verbosity = "NORMAL" // Verbosity mode. Available modes are: [SILENT, NORMAL, EXTRA]
+    warmup = "1s" // Time to spend at each warmup iteration.
+    warmupBatchSize = 10 // Warmup batch size: number of benchmark method calls per operation.
+    warmupForks = 0 // How many warmup forks to make for a single benchmark. 0 to disable warmup forks.
+    warmupIterations = 1 // Number of warmup iterations to do.
+    warmupMode = "INDI" // Warmup mode for warming up selected benchmarks. Warmup modes are: [INDI, BULK, BULK_INDI].
+    warmupBenchmarks.add(".*Warmup") // Warmup benchmarks to include in the run in addition to already selected. JMH will not measure these benchmarks, but only use them for the warmup.
+
+    zip64 = true // Use ZIP64 format for bigger archives
+    jmhVersion = "1.37" // Specifies JMH version
+    includeTests = true // Allows to include test sources into generate JMH jar, i.e. use it when benchmarks depend on the test classes.
+    duplicateClassesStrategy = DuplicatesStrategy.FAIL // Strategy to apply when encountring duplicate classes during creation of the fat jar (i.e. while executing jmhJar task)
+
+}
